--- a/Forums/styles/a.css
+++ b/Forums/styles/a.css
@@ -18416,7 +18416,7 @@ body.is-modalOpen .overlay-container,body.is-modalOpen .offCanvasMenu{
     display:inline-flex;
     justify-content:center;
     align-items:center;
-    border-radius:50%;
+    border-radius: 6px;
     vertical-align:top;
     overflow:hidden
 }
@@ -18442,9 +18442,10 @@ body.is-modalOpen .overlay-container,body.is-modalOpen .offCanvasMenu{
     content:'?'
 }
 .avatar.avatar--default.avatar--default--image{
-    background-color:#fefefe;
-    background-image:url();
-    background-size:cover
+    background-color:#483663;
+    background-image:url("https://interwebz-cheats.com/community/styles/interwebz/xenforo/default-avatar.jpg");
+    background-size:cover;
+    border: 1px solid #6e5c8a;
 }
 .avatar.avatar--default.avatar--default--image>span{
     display:none
@@ -21529,7 +21530,7 @@ a.reaction:hover .reaction-text,a.reaction:focus .reaction-text{
 .p-nav-list .p-navEl.is-selected{
     color:#2577b1;
     font-weight:700;
-    background:#f5f5f5;
+    background: transparent;
     border-top-left-radius:2px;
     border-top-right-radius:2px
 }
@@ -21597,13 +21598,17 @@ a.reaction:hover .reaction-text,a.reaction:focus .reaction-text{
     margin-left:auto;
     margin-right:10px;
     text-align:right;
-    flex-shrink:0
+    flex-shrink:0;
+    display: flex;
+    align-items: center;
 }
 .p-navgroup{
     float:left;
     background:rgba(20,20,20,0.15);
     border-top-left-radius:4px;
-    border-top-right-radius:4px
+    border-top-right-radius:4px;
+    display: flex;
+    align-items: center;
 }
 .p-navgroup:before,.p-navgroup:after{
     content:" ";
@@ -21642,13 +21647,16 @@ a.reaction:hover .reaction-text,a.reaction:focus .reaction-text{
     max-width:150px
 }
 .p-navgroup-link.p-navgroup-link--user .avatar{
-    width:21px;
-    height:21px;
-    font-size:13px
+    width:32px;
+    height:32px;
+    margin-right: 8px;
+    /* font-size:13px */
 }
 .p-navgroup-link.badgeContainer{
     opacity:.6;
-    position:relative
+    position:relative;
+    display: flex;
+    align-items: center;
 }
 .p-navgroup-link.badgeContainer:after{
     position:absolute;
@@ -21718,6 +21726,7 @@ a.reaction:hover .reaction-text,a.reaction:focus .reaction-text{
     border-top-left-radius:4px;
     border-left:none
 }
+
 @media (max-width:900px){
     .p-navgroup-link.p-navgroup-link--iconic .p-navgroup-linkText,.p-navgroup-link.p-navgroup-link--textual i{
         display:none
