--- a/Forums/Announcement/styles/a.css
+++ b/Forums/Announcement/styles/a.css
@@ -12914,14 +12914,14 @@ img{
 b,strong{
     font-weight:600
 }
-a{
+/* a{
     color:#a08fbd;
     text-decoration:none
 }
 a:hover{
     color:#e8e0f5;
     text-decoration:none
-}
+} */
 svg{
     fill:currentColor
 }
@@ -14046,7 +14046,7 @@ img.u-imgContained{
 }
 .block-filterBar .filterBar-filterToggle:hover,.block-filterBar .filterBar-menuTrigger:hover{
     text-decoration:none;
-    background:#52476b
+    background:#6E5C8A !important;
 }
 .block-filterBar .filterBar-menuTrigger{
     margin-right:-5px
@@ -14872,9 +14872,9 @@ img.u-imgContained{
     color:inherit;
     text-decoration:none
 }
-.button:hover,a.button:hover{
+/* .button:hover,a.button:hover{
     color:#e8e0f5
-}
+} */
 .button.button--primary,a.button.button--primary{
     color:#e8e0f5;
     font-weight:600;
@@ -14899,7 +14899,7 @@ img.u-imgContained{
 }
 .button.button--link:hover,a.button.button--link:hover,.button.button--link:active,a.button.button--link:active,.button.button--link:focus,a.button.button--link:focus{
     text-decoration:none;
-    background:#483663
+    background:#6E5C8A
 }
 .button.button--plain,a.button.button--plain{
     background:none;
@@ -19191,14 +19191,19 @@ tbody:last-child .dataList-row:last-child .dataList-cell{
     opacity:.75
 }
 .filterBar-menuTrigger{
+    background: #554270 !important;
+    border: 1px solid #6e5c8a !important;
+    color: #e8e0f5 !important;
+    padding: 4px 8px;
+    transition: all 150ms ease-in-out;
     float:right;
-    white-space:nowrap;
+    /* white-space:nowrap;
     color:#483663;
     border-radius:6px;
     text-decoration:none;
-    padding:1px 5px
+    padding:1px 5px */
 }
-.filterBar-menuTrigger:after{
+/* .filterBar-menuTrigger:after{
     font-family:'Font Awesome 5 Pro';
     font-size:inherit;
     font-style:normal;
@@ -19212,7 +19217,7 @@ tbody:last-child .dataList-row:last-child .dataList-cell{
     text-align:center;
     font-weight:900;
     unicode-bidi:isolate
-}
+} */
 @media (max-width:650px){
     .filterBar-filterToggle-label{
         display:none
