knowledge page done

--- a/Knowledge base/styles/a.css
+++ b/Knowledge base/styles/a.css
@@ -1,10 +1,6 @@
 @charset "UTF-8";
 /********* public:normalize.css ********/
 /*! normalize.css v7.0.0 | MIT License | github.com/necolas/normalize.css */
-:root {
-    --input-border-heavy: #62527b;
-    --input-border-light: #756293;
-}
  button,hr,input{
     overflow:visible
 }
@@ -13797,12 +13793,7 @@ img.u-imgContained{
 .block-container{
     color:#141414;
     background:#fefefe;
-    border-width:1px;
-    border-style:solid;
-    border-top-color:#dfdfdf;
-    border-right-color:#d8d8d8;
-    border-bottom-color:#cbcbcb;
-    border-left-color:#d8d8d8;
+    border:1px solid #6e5c8a;
     border-radius:4px
 }
 .block-container.block-container--none{
@@ -13856,15 +13847,15 @@ img.u-imgContained{
     }
 }
 .block-header{
-    padding:6px 10px;
+    padding: 12px;
+    border-bottom: 1px solid #6e5c8a;
+    color: #e8e0f5 !important;
     margin:0;
-    font-weight:400;
+    font-weight:600;
     text-decoration:none;
     font-size:20px;
-    color:#2577b1;
-    background:#edf6fd;
-    border-bottom:1px solid #dfdfdf;
-    background:linear-gradient(0deg, #edf6fd, #f6fafe)
+    /* background: #483663; */
+    /* background:linear-gradient(0deg, #edf6fd, #f6fafe) */
 }
 .block-header:before,.block-header:after{
     content:" ";
@@ -14139,7 +14130,8 @@ img.u-imgContained{
 .block-body{
     list-style:none;
     margin:0;
-    padding:0
+    padding:0;
+    background: #483663;
 }
 .block-body.block-body--collapsible{
     display:none;
@@ -14179,7 +14171,7 @@ img.u-imgContained{
 }
 .block-row{
     margin:0;
-    padding:6px 10px
+    /* padding:6px 10px */
 }
 .block-row:before,.block-row:after{
     content:" ";
@@ -14759,8 +14751,8 @@ img.u-imgContained{
 }
 @media (max-width:650px){
     .block-container,.blockMessage{
-        /* margin-left:-10px;
-        margin-right:-10px; */
+        margin-left:-10px;
+        margin-right:-10px;
         border-radius:0;
         border-left:none;
         border-right:none
@@ -15821,10 +15813,10 @@ select.input,.input.input--select{
     overflow-x:hidden;
     overflow-y:auto
 }
-select.input[disabled],.input.input--select[disabled]{
-    /* background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4.9 10'%3E%3Cstyle%3E._xfG%7Bfill:%238c8c8c;
-    %7D%3C/style%3E%3Cpath class='_xfG' d='M1.4 4.7l1.1-1.5 1 1.5m0 .6l-1 1.5-1.1-1.5'/%3E%3C/svg%3E") !important */
-}
+/* select.input[disabled],.input.input--select[disabled]{
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4.9 10'%3E%3Cstyle%3E._xfG%7Bfill:%238c8c8c;
+    %7D%3C/style%3E%3Cpath class='_xfG' d='M1.4 4.7l1.1-1.5 1 1.5m0 .6l-1 1.5-1.1-1.5'/%3E%3C/svg%3E") !important
+} */
 select.input[size],.input.input--select[size],select.input[multiple],.input.input--select[multiple]{
     background-image:none !important;
     padding-right:6px !important
@@ -18442,7 +18434,7 @@ body.is-modalOpen .overlay-container,body.is-modalOpen .offCanvasMenu{
     content:'?'
 }
 .avatar.avatar--default.avatar--default--image{
-    background-color:#483663;
+    background-color:#fefefe;
     background-image:url("https://interwebz-cheats.com/community/styles/interwebz/xenforo/default-avatar.jpg");
     background-size:cover;
     border: 1px solid #DBD2E3;
@@ -21271,9 +21263,9 @@ a.reaction:hover .reaction-text,a.reaction:focus .reaction-text{
     font-size:24px
 }
 .p-header-logo.p-header-logo--image img{
-    vertical-align: bottom;
-    max-height: 200px;
-    height: 36px;
+    vertical-align:bottom;
+    max-width:100%;
+    max-height:200px
 }
 .p-header-logo.p-header-logo--image img[src$="/xenforo-logo.svg"]{
     height:36px
@@ -21403,7 +21395,7 @@ a.reaction:hover .reaction-text,a.reaction:focus .reaction-text{
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    padding: 14px;
+    padding: 20px;
 }
 @supports (padding: max(0px)){
     .p-nav-inner{
@@ -21531,10 +21523,11 @@ a.reaction:hover .reaction-text,a.reaction:focus .reaction-text{
     transition: all .25s ease
 }
 .p-nav-list .p-navEl.is-selected{
-    color: #e8e0f5;
+    color:#2577b1;
     font-weight:700;
-    background: #554270;
+    background:#554270;
     border-radius: 4px;
+    transition: all .25s ease;
 }
 .p-nav-list .p-navEl.is-selected .p-navEl-link{
     padding-right:15px
@@ -21651,8 +21644,8 @@ a.reaction:hover .reaction-text,a.reaction:focus .reaction-text{
 .p-navgroup-link.p-navgroup-link--user .avatar{
     width:32px;
     height:32px;
+    font-size:12px;
     margin-right: 8px;
-    /* font-size:13px */
 }
 .p-navgroup-link.badgeContainer{
     opacity:.6;
@@ -21728,7 +21721,6 @@ a.reaction:hover .reaction-text,a.reaction:focus .reaction-text{
     border-top-left-radius:4px;
     border-left:none
 }
-
 @media (max-width:900px){
     .p-navgroup-link.p-navgroup-link--iconic .p-navgroup-linkText,.p-navgroup-link.p-navgroup-link--textual i{
         display:none
@@ -21779,14 +21771,12 @@ a.reaction:hover .reaction-text,a.reaction:focus .reaction-text{
     }
 }
 .p-sectionLinks{
-    font-size:13px;
-    /* color:#2577b1; */
-    background:#362A51;
+    font-size: 12px;
+    color: #a08fbd;
+    font-weight: 600;
+    background: #362a51;
     border-top: 1px solid #483663;
-    border-bottom:1px solid #483663
-}
-.p-sectionLinks-list li a:hover {
-    color: #E8E0F5 !important;
+    border-bottom: 1px solid #483663;
 }
 .p-sectionLinks .hScroller-action{
     color:#2577b1
@@ -21806,11 +21796,9 @@ a.reaction:hover .reaction-text,a.reaction:focus .reaction-text{
     height:10px
 }
 .p-sectionLinks-inner{
-    max-width:1280px;
-    padding:10px 10px;
-    margin:0 auto;
-
-
+    max-width: 1280px;
+    padding: 8px 10px;
+    margin: 0 auto;
 }
 .p-sectionLinks-inner:before,.p-sectionLinks-inner:after{
     content:" ";
@@ -21858,9 +21846,9 @@ a.reaction:hover .reaction-text,a.reaction:focus .reaction-text{
 .p-sectionLinks-list .p-navEl:hover{
     color:#185886
 }
-.p-sectionLinks-list .p-navEl:hover a{
-    text-decoration: none;
-}
+/* .p-sectionLinks-list .p-navEl:hover a{
+    text-decoration:
+} */
 .p-sectionLinks-list .p-navEl.is-menuOpen{
     color:#edf6fd;
     text-decoration:none;
@@ -21881,17 +21869,17 @@ a.reaction:hover .reaction-text,a.reaction:focus .reaction-text{
 .p-body{
     display:flex;
     align-items:stretch;
+    flex-direction: column;
     flex-grow:1;
-    min-height:1px
+    min-height:1px;
+    background: #2D2145;
 }
 .p-body-inner{
-    display:flex;
-    flex-direction:column;
-    width:100%;
-    max-width:1280px;
-    padding:20px 10px;
-    margin:0 auto;
-
+    max-width: 1280px;
+    padding: 0 10px;
+    margin: 0 auto;
+    padding-top: 8px;
+    padding-bottom: 16px;
 }
 @supports (padding: max(0px)){
     .p-body-inner{
@@ -22178,12 +22166,14 @@ a.reaction:hover .reaction-text,a.reaction:focus .reaction-text{
     flex-direction:row-reverse
 }
 .p-title-value{
-    padding:0;
-    margin:0 0 5px 0;
-    font-size:24px;
-    font-weight:400;
-    min-width:0;
-    margin-right:auto
+    padding: 0;
+    margin: 0 0 2px 0;
+    font-size: 24px;
+    font-weight: 600;
+    color: #e8e0f5;
+    text-transform: uppercase;
+    min-width: 0;
+    margin-right: auto;
 }
 .p-title-pageAction{
     margin-bottom:5px
@@ -22205,7 +22195,8 @@ a.reaction:hover .reaction-text,a.reaction:focus .reaction-text{
     background:#0f3652
 }
 .p-footer a{
-    color:#bcdef5
+    color:#a08fbd;
+    font-weight: 600;
 }
 .p-footer-inner{
     max-width: 1280px;
@@ -22708,51 +22699,57 @@ a.reaction:hover .reaction-text,a.reaction:focus .reaction-text{
         padding-top:0
     }
 }
-
-.block-gradient-container {
-    width: calc(100% + 2px);
-    height: 5px;
-    position: absolute;
-    top: -1px;
-    left: -1px;
-    box-shadow: 0px 0px 5px rgba(209,106,71,0.5);
-}
-.block-gradient {
+.p-breadcrumbs--container--inner {
+    display: flex;
+    align-items: center;
     width: 100%;
-    height: 100%;
-    background: linear-gradient(90deg, #d16a47 0%, #d1475e 100%);
-    border-radius: 6px 6px 0 0;
+    max-width: 1280px;
+    padding: 20px;
+    margin: 0 auto;
 }
-.node-description {
-    color: #A08FBD !important;
+.block-support .block-questions {
+    display: flex;
 }
-.text-color {
+.block-support .block-questions .block-questions--left {
+    flex: 1;
+}
+.block-questions--left,
+.block-popular {
+    display: flex;
+    flex-direction: column;
+}
+.block-questions--left .block-question {
+    width: 100% !important;
+    padding: 16px !important;
+    border-bottom: 1px solid #6e5c8a;
+}
+.block-support .block-questions .block-popular{
+    width: 40%;
+}
+.block-question a:hover,
+.block-popular a:hover {
     color: #E8E0E7 !important;
 }
-.node-body {
-    padding: 10px 5px;
-    /* border: 1px solid #A08FBD; */
+.block-popular {
+    border-left: 4px solid #6e5c8a;
 }
-.node--newIndicator {
-    font-size: 12px;
+.block-minorHeader {
+    /* padding: 24px 16px; */
+    margin: 0;
+    font-weight: 400;
+    text-decoration: none;
+    font-size: 13px;
     color: #e8e0f5;
-    border-radius: 4px;
-    padding-top: 3px;
-    padding-right: 8px;
-    padding-bottom: 2px;
-    padding-left: 8px;
-    font-weight: 800;
-    text-transform: uppercase;
-    background: linear-gradient(90deg, #d16a47 0%, #d1475e 100%);
-    box-shadow: 0px 0px 5px rgba(209,106,71,0.5);
-    margin-left: 4px;
+    /* font-weight: 600; */
+    background: #362a51;
+    border-bottom: 1px solid #6e5c8a;
+    padding: 16px;
 }
-.node-title {
-    font-weight: 600 !important;
+.block-popular a{
+    width: 100% !important;
+    padding: 6px 10px !important;
+    border-bottom: 1px solid #6e5c8a;
 }
-.node+.node {
-    border-top: 1px solid #6E5C8A !important; 
-}
-.underline:hover {
-    text-decoration: underline !important;
+.text-color:hover {
+    color: #E8E0E7 !important;
 }
